--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #firebase related packages  
+  firebase_core: ^4.1.1
+  firebase_auth: ^6.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
