--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   #firebase related packages  
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
+  cloud_firestore: ^6.0.2
 
 dev_dependencies:
   flutter_test:
